# msgpack-stream

./: Pipfile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  publish.yml  python-verify.yml
msgpack_stream/: _io.py  _msgpack.py  _number.py
scripts/: bench.py  obj.msgpack
src/msgpack_stream/: __init__.py  _ext.py  _io.py  _msgpack.py  _number.py
src/msgpack_streams/: __init__.py  _ext.py  _io.py  _msgpack.py  _number.py
tests/: test_callbacks.py  test_conformance.py  test_errors.py  test_ext.py  test_float32.py  test_security.py  test_stream.py  test_timestamp.py
