[project]
name = "msgpack-stream"
version = "0.1.0"
description = "Pure Python stream based implementation of msgpack"
readme = "README.md"
authors = [
    { name = "Peter Gessler", email = "gesslerpd@users.noreply.github.com" },
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.6"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "msgpack>=1.1.1",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]
