[project]
name = "msgpack-streams"
version = "1.0.0"
description = "Fast stream based implementation of msgpack in pure Python"
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Development Status :: 5 - Production/Stable",
]
keywords = [
    "msgpack",
    "streams",
    "serialization",
    "streaming",
    "datetime",
    "ext",
    "fast",
    "minimal",
]
authors = [
    { name = "Peter Gessler", email = "gesslerpd@users.noreply.github.com" },
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/gesslerpd/msgpack-stream"
Repository = "https://github.com/gesslerpd/msgpack-stream"
Documentation = "https://github.com/gesslerpd/msgpack-stream/blob/main/README.md"
Issues = "https://github.com/gesslerpd/msgpack-stream/issues"
Changelog = "https://github.com/gesslerpd/msgpack-stream/releases"

[build-system]
requires = ["uv-build>=0.10,<0.11"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "msgpack>=1.1.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.8",
]
